@@ -1,11 +1,14 @@
 Title: Handle gracefully missing sidebar snapins
 Component: multisite
-State: open
+Class: bug
+State: done
 Date: 2012-12-11 12:45:52
 Targetversion: 1.2.0
-Class: bug
 
 If via replication user settings are put onto a remote server
 that cannot display all configured sidebar snapins then the
 sidebar cannot be displayed. Fix: silently ignore missing
 sidebar snapins.
+
+2013-01-03 09:57:48: changed state open -> done
+Has been implemented.
