@@ -71,6 +71,7 @@
     * FIX: quote HTML variable names, fixes potential JS injection
     * Option dials (refresh, number of columns) now turnable by mouse wheel
     * FIX: Sidebar not raising exceptions on configured but not available snapins
+    * FIX: Quicksearch: Fixed Up/Down arrow handling in chrome
     
     WATO:
     * FIX: Fixed generated manual check definitions for checks without items
